--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.leaflet-popup-content {
+    all: unset;
+}
+
+.leaflet-popup-content p {
+    margin: 0;
+}
+
+.leaflet-popup-content-wrapper {
+    all: unset
+}
+
+.leaflet-popup-tip {
+    background-color: hsl(var(--b2));
+}
